--- a/image_generation_pytorch/pixi.toml
+++ b/image_generation_pytorch/pixi.toml
@@ -6,6 +6,9 @@ authors = ["Pavel Zwerschke <pavelzw@gmail.com>"]
 channels = ["conda-forge", "pytorch"]
 platforms = ["linux-64", "osx-arm64"]
 
+[system-requirements]
+linux = "4.18.0"
+
 [tasks]
 
 [dependencies]
