--- a/image_generation_pytorch/pixi.toml
+++ b/image_generation_pytorch/pixi.toml
@@ -10,13 +10,15 @@ platforms = ["linux-64", "osx-arm64"]
 linux = "4.18.0"
 
 [tasks]
+lint = "ruff ."
+format = "black ."
 
 [dependencies]
 python = "3.10.*"
-pytorch = "1.*"
-torchvision = "0.*"
-scipy = "1.*"
-tensorflow = "2.*"
+pytorch = "1.13.*"
+torchvision = "0.14.*"
+scipy = "1.11.*"
+tensorflow = "2.12.*"
 imageio = "2.31.1.*"
 tqdm = "4.66.1.*"
 loguru = "0.7.2.*"
