--- a/image_generation_pytorch/pixi.toml
+++ b/image_generation_pytorch/pixi.toml
@@ -3,20 +3,24 @@ name = "image_generation_pytorch"
 version = "0.1.0"
 description = "Add a short description here"
 authors = ["Pavel Zwerschke <pavelzw@gmail.com>"]
-channels = ["conda-forge", "pytorch"]
+channels = ["conda-forge"]
 platforms = ["linux-64", "osx-arm64"]
+# platforms = ["linux-64", "osx-arm64"]
 
 [system-requirements]
 linux = "4.18.0"
+cuda = "12.0"
 
 [tasks]
+main = "python main.py"
 lint = "ruff ."
 format = "black ."
 
 [dependencies]
 python = "3.10.*"
-pytorch = "1.13.*"
-torchvision = "0.14.*"
+# pytorch-gpu = "1.13.1"
+# pytorch-cuda = "11.7"
+torchvision = "0.14.1"
 scipy = "1.11.*"
 tensorflow = "2.12.*"
 imageio = "2.31.1.*"
@@ -26,3 +30,12 @@ ruff = "*"
 black = "*"
 opt_einsum = ">=3.3.0"
 opt-einsum = ">=3.3.0"
+
+[target.osx-arm64.dependencies]
+pytorch = "1.13.1"
+
+[target.linux-64.dependencies]
+pytorch-gpu = "1.13.1"
+
+# [target.linux-64.system-requirements]
+# cuda = "12.0"
